--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@hookform/devtools": "^4.3.1",
     "@mui/material": "^5.13.7",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.32.0",
+    "@tanstack/react-query-devtools": "^4.32.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
