--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
-    "swiper": "^10.0.3"
+    "swiper": "^10.0.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
