--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
+		"@hookform/resolvers": "^3.3.2",
 		"@mui/material": "^5.14.13",
 		"@reduxjs/toolkit": "^1.9.7",
 		"@tanstack/react-query": "^4.36.1",
@@ -21,7 +22,8 @@
 		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.16.0",
 		"swiper": "^10.3.1",
-		"uuid": "^9.0.1"
+		"uuid": "^9.0.1",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@hookform/devtools": "^4.3.1",
